--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.vf.admin.visualfusion.MainActivity"
-    tools:showIn="@layout/app_bar_main">
+    tools:showIn="@layout/app_bar_main"
+    android:padding="20dp">
 
     <LinearLayout
         android:id="@+id/Linearlayot_for_fragment"
@@ -14,14 +15,20 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <TextView
+        <fragment
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="This is th universal content screen!"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:id="@+id/fr_1"
+            android:name="com.vf.admin.visualfusion.FragmentLoadScreen"
+            />
+
+
+
+
+
+
     </LinearLayout>
+
 
 </android.support.constraint.ConstraintLayout>
