--- a/VisaulFusion/app/src/main/res/layout/new_grid_upload.xml
+++ b/VisaulFusion/app/src/main/res/layout/new_grid_upload.xml
@@ -75,6 +75,44 @@
 
         </LinearLayout>
 
+        <!--DANIEL: I want to add below textbox-->
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:padding="10dp"
+            >
+
+
+
+            <TextView
+                android:id="@+id/txtMaxQuantity"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="12sp"
+                android:textColor="#000000">
+            </TextView>
+
+
+
+
+        </LinearLayout>
+
+
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:padding="10dp"
+            >
+
+
+
+        </LinearLayout>
+
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
