--- a/VisaulFusion/app/src/main/res/layout/activity_yes_no_unit.xml
+++ b/VisaulFusion/app/src/main/res/layout/activity_yes_no_unit.xml
@@ -103,6 +103,29 @@
             android:visibility="invisible"
             android:textSize="24sp" />
 
+        <TextView
+            android:text="Quantity"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:id="@+id/txtQuantity"
+            android:visibility="visible"
+            android:textSize="24sp" />
+
+        <EditText
+            android:hint="[Qty]"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:id="@+id/editQuantity"
+            android:visibility="visible"
+            android:textSize="24sp" />
+
+
 
         <TextView
             android:text="What would you like to do?"
