--- a/VisaulFusion/app/src/main/res/layout/new_grid_upload.xml
+++ b/VisaulFusion/app/src/main/res/layout/new_grid_upload.xml
@@ -101,17 +101,7 @@
 
 
 
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:padding="10dp"
-            >
 
-
-
-        </LinearLayout>
 
         <LinearLayout
             android:orientation="vertical"
@@ -127,6 +117,27 @@
                 android:layout_height="wrap_content"
                 android:textSize="12sp"
                 android:textColor="#000000">
+            </TextView>
+
+
+
+
+        </LinearLayout>
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:padding="10dp"
+            >
+
+            <TextView
+                android:id="@+id/qty"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="12sp"
+                android:textColor="#000000"
+                android:text="x here">
             </TextView>
 
 
