--- a/VisaulFusion/app/src/main/res/layout/new_grid_upload.xml
+++ b/VisaulFusion/app/src/main/res/layout/new_grid_upload.xml
@@ -132,7 +132,7 @@
             >
 
             <TextView
-                android:id="@+id/qty"
+                android:id="@+id/txtQuantitySelected"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="12sp"
