--- a/VisaulFusion/app/src/main/res/layout/new_upload_layout.xml
+++ b/VisaulFusion/app/src/main/res/layout/new_upload_layout.xml
@@ -54,7 +54,7 @@
             android:layout_weight="1">
 
             <TextView
-                android:hint="Desc."
+                android:text="Desc."
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/col1"
@@ -66,7 +66,7 @@
                 android:layout_weight="1" />
 
             <TextView
-                android:hint="Image"
+                android:text="Image"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/col2"
@@ -77,7 +77,7 @@
 
                 android:layout_weight="1" />
             <TextView
-                android:hint="Barcode "
+                android:text="Barcode "
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/txtBarcodeHeader"
@@ -89,7 +89,7 @@
                 android:layout_weight="1" />
             <!--DANIEL: I want to add below textbox-->
             <TextView
-                android:hint="Barcode "
+                android:text="MaxQty"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/txtMaxQtyHeader"
@@ -103,7 +103,7 @@
 
 
             <TextView
-                android:hint="Img Count"
+                android:text="Img Count"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/col5"
@@ -115,7 +115,7 @@
                 android:layout_weight="1" />
             <!-- extra columb here -->
             <TextView
-                android:hint="Qty"
+                android:text="Qty"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/col6"
