--- a/VisaulFusion/app/src/main/res/layout/activity_upload_photo.xml
+++ b/VisaulFusion/app/src/main/res/layout/activity_upload_photo.xml
@@ -107,14 +107,7 @@ android:background="@drawable/backgroud_gradient">
         android:layout_weight="1">
 
 
-        <ImageView
-            android:layout_width="300dp"
-            android:layout_height="300dp"
-            app:srcCompat="@drawable/camera"
-            android:id="@+id/ivImage"
-            android:layout_weight="1"
-            android:layout_gravity="center_vertical|center_horizontal"
-            android:padding="25dp" />
+
 
 
     </LinearLayout>
@@ -133,6 +126,12 @@ android:background="@drawable/backgroud_gradient">
             android:layout_height="match_parent"
             android:id="@+id/editProductComplaint"
             android:inputType="textMultiLine" />
+
+        <ImageView
+            android:id="@+id/ivImage"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/avatar_blank" />
     </LinearLayout>
     <LinearLayout
         android:orientation="vertical"
