--- a/VisaulFusion/app/src/main/res/layout/activity_new_favorites4.xml
+++ b/VisaulFusion/app/src/main/res/layout/activity_new_favorites4.xml
@@ -25,22 +25,22 @@
                 android:id="@+id/heading"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="RFQ Preliminary Cost Benchmarking"
-                android:textStyle="bold"
-                android:gravity="center_horizontal"
-                android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
-                android:textSize="20dp"/>
+                android:layout_marginTop="10dp"
+                android:gravity="center_horizontal"
+                android:text="4. Unitry Illumination?"
+                android:textSize="20dp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/question"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Was the costs in line with the benchmarketing and target?"
-                android:gravity="center_horizontal"
-                android:layout_marginTop="20dp"
                 android:layout_marginBottom="40dp"
-                android:textSize="20dp"/>
+                android:layout_marginTop="20dp"
+                android:gravity="center_horizontal"
+                android:text=" "
+                android:textSize="20dp" />
         </LinearLayout>
 
         <LinearLayout
