--- a/VisaulFusion/app/src/main/res/layout/activity_new_favorites6.xml
+++ b/VisaulFusion/app/src/main/res/layout/activity_new_favorites6.xml
@@ -25,22 +25,21 @@
                 android:id="@+id/heading"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Company Visit"
-                android:textStyle="bold"
-                android:gravity="center_horizontal"
-                android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
-                android:textSize="20dp"/>
+                android:layout_marginTop="10dp"
+                android:gravity="center_horizontal"
+                android:text="Painting?"
+                android:textSize="20dp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/question"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Is the facility of a suitable standard"
-                android:gravity="center_horizontal"
-                android:layout_marginTop="20dp"
                 android:layout_marginBottom="40dp"
-                android:textSize="20dp"/>
+                android:layout_marginTop="20dp"
+                android:gravity="center_horizontal"
+                android:textSize="20dp" />
         </LinearLayout>
 
         <LinearLayout
