--- a/VisaulFusion/app/src/main/res/layout/new_upload_layout.xml
+++ b/VisaulFusion/app/src/main/res/layout/new_upload_layout.xml
@@ -10,6 +10,14 @@
     >
 
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#000000"
+        android:id="@+id/overlay">
+
+    </FrameLayout>
+
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
