--- a/VisaulFusion/app/src/main/res/layout/new_upload_layout.xml
+++ b/VisaulFusion/app/src/main/res/layout/new_upload_layout.xml
@@ -13,7 +13,7 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#000000"
+        android:background="#ffffff"
         android:id="@+id/overlay">
 
     </FrameLayout>
