--- a/VisaulFusion/app/src/main/res/layout/homemenu_layout.xml
+++ b/VisaulFusion/app/src/main/res/layout/homemenu_layout.xml
@@ -29,7 +29,9 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:id="@+id/textView1"
-                android:text="TextView1" />
+                android:text="TextView1"
+                android:visibility="gone"
+                />
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
