--- a/VisaulFusion/app/src/main/res/layout/login_layout.xml
+++ b/VisaulFusion/app/src/main/res/layout/login_layout.xml
@@ -71,6 +71,7 @@
                 android:minWidth="350dp"
                 android:maxWidth="100dp"
                 android:minHeight="50dp"
+                android:text=""
                 android:layout_gravity="center_vertical|center_horizontal"
                 />
 
@@ -93,7 +94,7 @@
                 android:id="@+id/checkBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Skip News. App v3.16"
+                android:text="@string/checkbox"
                 />
 
 
