--- a/VisaulFusion/app/src/main/res/layout/new_survey_layout.xml
+++ b/VisaulFusion/app/src/main/res/layout/new_survey_layout.xml
@@ -191,40 +191,17 @@
                         android:layout_height="match_parent"
                         android:orientation="horizontal">
 
-
-                        <RadioGroup
-                            android:id="@+id/radioCommitted"
-                            android:layout_width="wrap_content"
+                        <Spinner
+                            android:id="@+id/spinnerYesNo"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:orientation="horizontal">
+                            android:visibility="visible"
+
+                            />
 
 
-                            <RadioButton
-                                android:id="@+id/radioYes"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginRight="140dp"
-                                android:layout_weight="1"
-                                android:backgroundTint="#8f8f8f"
-                                android:onClick="onRadioButtonClicked"
-                                android:text="Yes"
-                                android:textColor="#8f8f8f"
-                                android:textSize="18dp" />
-
-                            <RadioButton
-                                android:id="@+id/radioNo"
-
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:backgroundTint="#8f8f8f"
-                                android:onClick="onRadioButtonClicked"
-                                android:text="No"
-                                android:textColor="#8f8f8f"
-                                android:textSize="18dp" />
 
 
-                        </RadioGroup>
                     </LinearLayout>
 
                     <TextView
